--- a/JSON.html
+++ b/JSON.html
@@ -10,6 +10,9 @@
 
             var myJSON = JSON.stringify(myObj); //converts objects to JSON
 
+            var newObj = JSON.parse(myJSON);
+            
+
             document.getElementById("result").innerHTML = newObj.name;
         </script>
     </body>
