--- a/promises.html
+++ b/promises.html
@@ -1,5 +1,17 @@
 <html>
     <body>
-        
+        <h2>JS Callbacks</h2>
+        <p>Do calculaton and display result</p>
+        <p id ="result"></p>
+        <script>
+            function myDisplayer(value) {
+                document.getElementById("result").innerHTML = value;
+            }
+            function myCalculator(num1, num2, myCallback) {
+                let sum = num1 + num2;
+                myCallback(sum);
+            }
+            myCalculator(5, 5, myDisplayer);
+        </script>
     </body>
 </html>
